students/IvanyukIvan/task_02/src/k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web08
  namespace: app08
  labels:
    app: web08
    org.bstu.student.fullname: "Ivanyuk_Ivan_Aleksandrovich"
    org.bstu.student.id: "220041"
    org.bstu.group: "AS-64"
    org.bstu.variant: "08"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "JonF1re"
    org.bstu.student.slug: "as-64-220041-v08"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web08
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web08
    spec:
      containers:
        - name: web
          image: JonF1re/myapp:stu-220041-v08  # Замените на свой реестр/тег
          ports:
            - containerPort: 8094
          readinessProbe:
            httpGet:
              path: /ping
              port: 8094
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 8094
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
          volumeMounts:
            - name: app-data
              mountPath: /app/data
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: data-v08
