students/IvanyukIvan/task_02/src/k8s/statefulset-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: app08
  labels:
    app: postgres
    org.bstu.student.fullname: "Ivanyuk_Ivan_Aleksandrovich"
    org.bstu.student.id: "220041"
    org.bstu.group: "AS-64"
    org.bstu.variant: "08"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "JonF1re"
    org.bstu.student.slug: "as-64-220041-v08"
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "appuser", "-d", "app_220041_v08"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "appuser", "-d", "app_220041_v08"]
            initialDelaySeconds: 10
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
