students/IvanyukIvan/task_02/src/k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: web08
  namespace: app08
  labels:
    app: web08
    org.bstu.student.fullname: "Ivanyuk_Ivan_Aleksandrovich"
    org.bstu.student.id: "220041"
    org.bstu.group: "AS-64"
    org.bstu.variant: "08"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "JonF1re"
    org.bstu.student.slug: "as-64-220041-v08"
spec:
  selector:
    app: web08
  ports:
    - port: 80
      targetPort: 8094
  type: ClusterIP
