students/IvanyukIvan/task_02/src/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web08
  namespace: app08
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    org.bstu.student.fullname: "Ivanyuk_Ivan_Aleksandrovich"
    org.bstu.student.id: "220041"
    org.bstu.group: "AS-64"
    org.bstu.variant: "08"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "JonF1re"
    org.bstu.student.slug: "as-64-220041-v08"
spec:
  rules:
    - host: web08.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web08
                port:
                  number: 80
